--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "fs": "0.0.2",
     "jsonwebtoken": "^5.4.1",
     "morgan": "^1.6.1",
-    "mssql": "^2.3.1"
+    "mssql": "^2.3.1",
+    "pem": "^1.8.1"
   }
 }
