--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^5.4.1",
     "morgan": "^1.6.1",
     "mssql": "^2.3.1",
-    "pem": "^1.8.1"
+    "pem": "^1.8.1",
+    "validator": "^4.2.1"
   }
 }
